dropshot/tests/fail/bad_endpoint17.stderr
error[E0277]: the trait bound `TypedBody<Stuff>: SharedExtractor` is not satisfied
  --> tests/fail/bad_endpoint17.rs:31:14
   |
31 |     _param1: TypedBody<Stuff>,
   |              ^^^^^^^^^^^^^^^^ the trait `SharedExtractor` is not implemented for `TypedBody<Stuff>`
   |
   = help: the following other types implement trait `SharedExtractor`:
             dropshot::Path<PathType>
             dropshot::Query<QueryType>
note: required by a bound in `need_shared_extractor`
  --> tests/fail/bad_endpoint17.rs:25:1
   |
25 | / #[endpoint {
26 | |     method = GET,
27 | |     path = "/test",
28 | | }]
   | |__^ required by this bound in `need_shared_extractor`
...
31 |       _param1: TypedBody<Stuff>,
   |                --------- required by a bound in this
   = note: this error originates in the attribute macro `endpoint` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `fn(Arc<RequestContext<()>>, TypedBody<Stuff>, UntypedBody) -> impl Future<Output = Result<HttpResponseOk<()>, HttpError>> {<impl From<two_exclusive_extractors> for ApiEndpoint<<Arc<RequestContext<()>> as RequestContextArgument>::Context>>::from::two_exclusive_extractors}: dropshot::handler::HttpHandlerFunc<_, _, _>` is not satisfied
  --> tests/fail/bad_endpoint17.rs:29:10
   |
25 | / #[endpoint {
26 | |     method = GET,
27 | |     path = "/test",
28 | | }]
   | |__- required by a bound introduced by this call
29 |   async fn two_exclusive_extractors(
   |            ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `dropshot::handler::HttpHandlerFunc<_, _, _>` is not implemented for fn item `fn(Arc<RequestContext<()>>, TypedBody<Stuff>, UntypedBody) -> impl Future<Output = Result<HttpResponseOk<()>, HttpError>> {<impl From<two_exclusive_extractors> for ApiEndpoint<<Arc<RequestContext<()>> as RequestContextArgument>::Context>>::from::two_exclusive_extractors}`
   |
note: required by a bound in `ApiEndpoint::<Context>::new`
  --> src/api_description.rs
   |
   |         HandlerType: HttpHandlerFunc<Context, FuncParams, ResponseType>,
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ApiEndpoint::<Context>::new`
